# cmake_library

./: README.md
foo_library/: CMakeLists.txt
foo_library/include/: foo_library.h
foo_library/install/cmake/: foo_libraryTargets-noconfig.cmake
foo_library/src/: foo_data.h  foo_library.cpp
foo_project/: CMakeLists.txt  README.md
foo_project/src/: main.cpp
